chore: alignment nav bar fix

--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -37,11 +37,12 @@
     align-items: center;
 }
 .location-container{
-    width: 40%;
+    width: 30%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-right: 5%;
 }
 .icon{
     padding-left: 5px;
